scafoldind pages identity

--- a/UserManangementWithIdentity/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/UserManangementWithIdentity/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using UserManangementWithIdentity.Areas.Identity
 @using UserManangementWithIdentity.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using UserManangementWithIdentity.Models
