--- a/UserManangementWithIdentity/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/UserManangementWithIdentity/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -7,10 +7,21 @@
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
-<div class="row">
-    <div class="col-md-6">
-        <form id="profile-form" method="post">
+<form id="profile-form" method="post" enctype="multipart/form-data">
+    <div class="row">
+        <div class="col-md-6">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.LastName"></label>
+                <input asp-for="Input.LastName" class="form-control" />
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
@@ -21,10 +32,30 @@
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
-        </form>
+        </div>
+        <div class="col-md-6">
+           <div class="form-group">
+                <label asp-for="Input.ProfilePicture" class="w"></label>
+                @if(Model.Input.ProfilePicture != null)
+                {
+                    <img id="profilepicture" alt="Profile" class="profile" src="data:image/*;base64,@(Convert.ToBase64String(Model.Input.ProfilePicture))"/>
+                }
+                else
+                {
+                    <img id="profilepicture" alt="Profile" class="profile" src="~/Images/Default.png.png" />
+                }
+                <div class="custom-file mt-2">
+                    <input type="file" asp-for="Input.ProfilePicture" accept="image/*" class="custom-file-input"
+                    onchange="document.getElementById('profilepicture').src=window.URL.createObjectURL(this.files[0])"/>
+                <label asp-for="Input.ProfilePicture" class="custom-file-label"> choose picture ....</label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</form>
+
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
