--- a/UserManangementWithIdentity/wwwroot/css/site.css
+++ b/UserManangementWithIdentity/wwwroot/css/site.css
@@ -69,3 +69,10 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/* profile picture*/
+.profile{
+    height:300px;
+    width:300px;
+    object-fit:cover;
+}
