--- a/UserManangementWithIdentity/Views/Shared/_LoginPartial.cshtml
+++ b/UserManangementWithIdentity/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,14 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
+        @if(UserManager.GetUserAsync(User).Result.ProfilePicture != null)
+        {
+             <li class="nav-item">
+                 <img class="rounded-circle" alt="profile" style="width:40px;height:40px"
+                 src="data:image/*;base64,@(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))"/>
+            </li>
+        }
+        <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
