--- a/UserManangementWithIdentity/Views/Shared/_LoginPartial.cshtml
+++ b/UserManangementWithIdentity/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
         @if(UserManager.GetUserAsync(User).Result.ProfilePicture != null)
         {
              <li class="nav-item">
-                 <img class="rounded-circle" alt="profile" style="width:40px;height:40px"
+                 <img class="rounded-circle" alt="profile" style="width:40px;height:40px;object-fit:cover"
                  src="data:image/*;base64,@(Convert.ToBase64String(UserManager.GetUserAsync(User).Result.ProfilePicture))"/>
             </li>
         }
