--- a/UserManangementWithIdentity/Views/_ViewImports.cshtml
+++ b/UserManangementWithIdentity/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using UserManangementWithIdentity
 @using UserManangementWithIdentity.Models
+@using UserManangementWithIdentity.ViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
