--- a/UserManangementWithIdentity/Views/Users/Index.cshtml
+++ b/UserManangementWithIdentity/Views/Users/Index.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h1 class="text-info">List Of Users</h1>
+<a asp-action="Add" class="btn btn-outline-primary"> Add New User</a>
 <table class="table table-bordered table-striped table-hover mt-4">
     <thead>
         <tr  class="bg-info text-white ">
