--- a/UserManangementWithIdentity/Views/Users/Index.cshtml
+++ b/UserManangementWithIdentity/Views/Users/Index.cshtml
@@ -7,14 +7,14 @@
 <a asp-action="Add" class="btn btn-outline-primary"> Add New User</a>
 <table class="table table-bordered table-striped table-hover mt-4">
     <thead>
-        <tr  class="bg-info text-white ">
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>user Name</th>
-        <th>Email</th>
-        <th>Roles</th>
-        <th>Actions</th>
-    </tr>
+        <tr class="bg-info text-white ">
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>user Name</th>
+            <th>Email</th>
+            <th>Roles</th>
+            <th>Actions</th>
+        </tr>
 
     </thead>
     <tbody>
@@ -27,10 +27,58 @@
                 <td>@User.Email</td>
                 <td> @string.Join(" , ",  @User.Roles.ToList())</td>
                 <td>
-                    <a asp-action="ManageRoles" asp-controller="Users" class="btn btn-outline-info" asp-route-id="@User.Id">Manage Roles</a>
-                    <a asp-action="Edit" asp-controller="Users" class="btn btn-outline-secondary" asp-route-id="@User.Id">Edit</a>
+                    <a asp-action="ManageRoles" asp-controller="Users" class="btn btn-outline-info btn-sm" asp-route-id="@User.Id">Manage Roles</a>
+                    <a asp-action="Edit" asp-controller="Users" class="btn btn-outline-secondary btn-sm" asp-route-id="@User.Id">Edit</a>
+                    <a href="javascript:;" class="btn btn-outline-danger js-delete btn-sm" data-id="@User.Id">Delete</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+@section scripts{
+<script>
+    const { error } = require("jquery");
+
+                $(document).ready(function(){
+                    $('.js-delete').on("click",function(){
+                    var btn=$(this);
+                    bootbox.confirm({
+            message: "Are you sure you want to delete this user ?",
+            buttons: {
+                confirm: {
+                    label: 'Yes',
+                    className: 'btn-danger'
+                },
+                cancel: {
+                    label: 'No',
+                    className: 'btn-dark'
+                }
+            },
+            callback: function (result) {
+                if(result){
+                    $.ajax({
+                        url:'/api/users/?id=' + btn.data('id'),
+                        method:'DELETE',
+                        success:function(){
+                            btn.parent('tr').fadeOut();
+                            alert("User is deleted");
+                        },
+                        error:function(){
+                            alert("Something Wrong");
+                        }
+
+
+                    });
+                }
+            }
+        });
+
+
+
+                    });
+
+                });
+
+</script>
+}
